[gd_scene load_steps=5 format=3 uid="uid://doaoix1vrbfym"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_l0sym"]
[ext_resource type="Texture2D" uid="uid://4tkybbqyge01" path="res://scenes/mrguy.png" id="2_ma6bv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n8tre"]
size = Vector2(21.75, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wth06"]
size = Vector2(22, 12.5)

[node name="Player" type="CharacterBody2D"]
z_index = 10
position = Vector2(-13, 2)
scale = Vector2(0.266579, 0.28098)
script = ExtResource("1_l0sym")

[node name="PlayerNormalCollision" type="CollisionShape2D" parent="."]
position = Vector2(12.875, -13.5)
shape = SubResource("RectangleShape2D_n8tre")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(12.9583, -13.4)
scale = Vector2(0.0646504, 0.0757143)
texture = ExtResource("2_ma6bv")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -128)

[node name="PolicyLabel" type="Label" parent="."]
z_index = 10
offset_left = -536.0
offset_top = -422.0
offset_right = -458.0
offset_bottom = -399.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "POLICIES: "

[node name="CrouchingCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(13, -9.25)
shape = SubResource("RectangleShape2D_wth06")
